fix: update footer and navigation list display properties for better visibility

--- a/css/style.css
+++ b/css/style.css
@@ -653,9 +653,11 @@ footer{
         justify-content: space-around;
         transform: translateX(100%);
         transition: transform 0.3s ease-in;
+        display: none;
     }
     .nav-list.active{
         transform: translateX(0);
+        display: flex;
     }
     .a-underl {
         text-decoration: underline ;
